# dummy_robothood

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  entrypoint.sh  robothood_uml.drawio  run.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
.tools-cfg/: .coveragerc  bumpversion.cfg  mypy.ini  pylint-whitelist-dict.dic  sonar-project.properties  towncrier.toml
robothood/: __init__.py  leftovers.py  main.py
robothood/config/: log_config.json
robothood/discord_bot/: constants.py  discord_bot.py
robothood/discord_signals/: constants.py  discord_message.py  signals.py  target_reached_message.py  trading_message.py  utils.py
robothood/errors/: __init__.py  errors.py
robothood/hoodapi/: hoodapi.py  peewee_models.py
robothood/signal_managers/: constants.py  signal_manager.py  target_reached_signal_manager.py  trading_signal_manager.py  utils.py
tests/: conftest.py  pytest.ini  test_sanity.py
tests/functional/test_discord_signals_functional/: test_target_reached_message_functional.py  test_trading_message_functional.py
tests/functional/test_moulagapi_functional/: test_moulagapi_functional.py
tests/integration/: test_integration.py
tests/unit/test_discord_bot_unit/: test_discord_bot_unit.py
tests/unit/test_discord_signals_unit/: conftest.py  test_signals_unit.py  test_target_reached_message_unit.py  test_trading_message_unit.py  test_utils_unit.py
tests/unit/test_signal_managers_unit/: test_signal_manager_utils_unit.py  test_target_reached_signal_manager_unit.py  test_trading_signal_manager_unit.py
