[metadata]
name = robothood
description = Generous Crypto Trading Bot
long_description = file: README.md
license = PRIVATE
author = Maxime Caitucoli
author_email = maxime.caitucoli@live.fr
provides = robothood
url = https://github.com/etnberz/robothood
download_url =
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8

[options]
zip_safe = False
python_requires = >=3.8, <3.9
packages = find:
include_package_data = True
install_requires =
    discord.py-self>=1.9.2
	python-binance>=1.0.15
	peewee>=3.14.9


[options.extras_require]
tests =
	pytest~=7.2.0
    pytest-asyncio~=0.20.2
	pytest-mock~=3.2.0

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
